data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3423.wast
;; 2. **Deep Loop with Call Index Error**:    - **Description**: Design a WebAssembly function with a deep loop structure containing several layers and place a `call` instruction with an invalid function index at the deepest loop level.    - **Constraint**: The function index should reference a non-existent function.    - **Relation to Mismanagement of Block Nesting**: Aims to identify issues related to loop nesting management when an invalid function call is encountered.

(assert_invalid
  (module
    (func $deep-loop (loop (loop (loop (loop (call 999)))))) ; Invalid function index
  )
  "unknown function index"
)